WebCore:

2009-06-01  Brett Wilson  <brettw@chromium.org>

        Reviewed by Darin Adler.  Landed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=25750

        Test: fast/transforms/bounding-rect-zoom.html

        Make getClientRects and getBoundingClientRect account for ther zoom
        factor.

        * dom/Element.cpp:
        (WebCore::adjustFloatPointForAbsoluteZoom):
        (WebCore::adjustFloatQuadForAbsoluteZoom):
        (WebCore::adjustIntRectForAbsoluteZoom):
        (WebCore::Element::getClientRects):
        (WebCore::Element::getBoundingClientRect):

LayoutTests:

2009-06-01  Brett Wilson  <brettw@chromium.org>

        Reviewed by Darin Adler.  Landed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=25750

        Test: fast/transforms/bounding-rect-zoom.html

        Make getClientRects and getBoundingClientRect account for ther zoom
        factor.

        * fast/transforms/bounding-rect-zoom.html: Added.
        * platform/mac/fast/transforms/bounding-rect-zoom-expected.txt: Added.



Canonical link: https://commits.webkit.org/36151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44315 268f45cc-cd09-0410-ab3c-d52691b4dbfc